--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@unleash/nextjs": "^1.6.2",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "react": "19.1.0",
