--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev:new": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
+    "prisma:push": "dotenv -e .env.local -- prisma db push",
+    "prisma:seed": "dotenv -e .env.local -- prisma db seed",
+    "prisma:studio": "dotenv -e .env.local -- prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@unleash/nextjs": "^1.6.2",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
@@ -16,18 +22,24 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.0",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
     "autoprefixer": "^10.0.1",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.3.3",
     "postcss": "^8",
+    "prisma": "^6.9.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "overrides": {
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
