--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "prisma:push": "dotenv -e .env.local -- prisma db push",
     "prisma:seed": "dotenv -e .env.local -- prisma db seed",
-    "prisma:studio": "dotenv -e .env.local -- prisma studio"
+    "prisma:studio": "dotenv -e .env.local -- prisma studio",
+    "prepare": "husky"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
@@ -29,7 +30,10 @@
     "dotenv-cli": "^8.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.3.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.0",
     "postcss": "^8",
+    "prettier": "3.5.3",
     "prisma": "^6.9.0",
     "tailwindcss": "^3.3.0",
     "tsx": "^4.19.4",
@@ -41,5 +45,8 @@
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
