--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@sentry/nextjs": "^9.27.0",
     "@unleash/nextjs": "^1.6.2",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
