--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev:new": "next dev --turbopack",
     "dev": "next dev",
     "build": "next build",
+    "build:prod": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "prisma:push": "dotenv -e .env.local -- prisma db push",
