--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev:new": "next dev --turbopack",
     "dev": "next dev",
     "build": "next build",
-    "build:prod": "npx prisma generate && next build",
+    "build:prod": "next build",
     "start": "next start",
     "lint": "next lint",
     "prisma:push": "dotenv -e .env.local -- prisma db push",
     "prisma:seed": "dotenv -e .env.local -- prisma db seed",
     "prisma:studio": "dotenv -e .env.local -- prisma studio",
+    "postinstall": "prisma generate",
     "prepare": "husky"
   },
   "dependencies": {
