--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "dev:new": "next dev --turbopack",
     "dev": "next dev",
     "build": "next build",
-    "build:prod": "next build",
+    "build:prod": "prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
+    "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "prisma:push": "dotenv -e .env.local -- prisma db push",
     "prisma:seed": "dotenv -e .env.local -- prisma db seed",
     "prisma:studio": "dotenv -e .env.local -- prisma studio",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --no-engine",
     "prepare": "husky"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@prisma/extension-accelerate": "^2.0.1",
     "@sentry/browser": "^9.27.0",
     "@sentry/nextjs": "^9.27.0",
     "@unleash/nextjs": "^1.6.2",
