--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/browser": "^9.27.0",
     "@sentry/nextjs": "^9.27.0",
     "@unleash/nextjs": "^1.6.2",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "react": "19.1.0",
