♻️ (popup.tsx): remove Popup component in favor of react-toastify for notifications
✨ (game.tsx, page.tsx): integrate react-toastify for improved user notifications

⬆️ (package.json): add react-toastify dependency for toast notifications

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-intl": "^4.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5",
     "unleash-proxy-client": "^3.7.6"
   },
   "devDependencies": {
