--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@unleash/nextjs": "^1.6.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "luxon": "^3.6.1",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "react": "19.1.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^20.19.0",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
