✨ (game): add new game feature with context and components
🔧 (config): update .gitignore to include all generated directories

🌐 (i18n): integrate Tolgee for internationalization support

⬆️ (deps): upgrade next-intl and add Tolgee dependencies

♻️ (prisma): refactor prisma client import path

📝 (docs): add comments and documentation for new components and hooks

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "@sentry/browser": "^9.27.0",
     "@sentry/nextjs": "^9.27.0",
+    "@tolgee/react": "^6.2.6",
+    "@tolgee/web": "^6.2.6",
     "@unleash/nextjs": "^1.6.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "luxon": "^3.6.1",
     "next": "15.3.3",
-    "next-intl": "^4.1.0",
+    "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
