--- a/package.json
+++ b/package.json
@@ -17,22 +17,21 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@posthog/nextjs-config": "^1.0.2",
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
-    "@sentry/browser": "^9.27.0",
-    "@sentry/nextjs": "^9.27.0",
     "@tolgee/react": "^6.2.6",
     "@tolgee/web": "^6.2.6",
-    "@unleash/nextjs": "^1.6.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "luxon": "^3.6.1",
     "next": "15.3.3",
     "next-intl": "^4.3.4",
+    "posthog-js": "^1.257.2",
+    "posthog-node": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-toastify": "^11.0.5",
-    "unleash-proxy-client": "^3.7.6"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
