--- a/package.json
+++ b/package.json
@@ -38,17 +38,17 @@
     "@types/node": "^20.19.0",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
-    "dotenv-cli": "^8.0.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "postcss": "^8",
-    "prettier": "3.5.3",
+    "prettier": "^3.8.1",
     "prisma": "^7.4.0",
     "tailwindcss": "^4.1.8",
     "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
