--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tolgee/web": "^6.2.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "better-auth": "^1.4.18",
     "dotenv": "^17.3.1",
     "luxon": "^3.6.1",
     "next": "16.1.6",
