--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "prisma:seed": "dotenv -e .env.local -- prisma db seed",
     "prisma:studio": "dotenv -e .env.local -- prisma studio",
     "postinstall": "prisma generate",
-    "prepare": "husky"
+    "prepare": "husky",
+    "inlang:translate": "inlang machine translate --project ./project.inlang",
+    "inlang:validate": "inlang validate --project ./project.inlang"
   },
   "dependencies": {
     "@posthog/nextjs-config": "^1.0.2",
     "@prisma/client": "^7.4.0",
-    "@tolgee/react": "^6.2.6",
-    "@tolgee/web": "^6.2.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "better-auth": "^1.4.18",
@@ -34,6 +34,7 @@
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
+    "@inlang/cli": "^3.1.6",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/luxon": "^3.6.2",
     "@types/node": "^24.10.13",
