✅ feat: add comprehensive E2E testing infrastructure with Playwright
- Add GitHub Actions workflow for automated E2E testing on PRs
- Configure Playwright with Chrome and Firefox browser support
- Create test authentication system with dedicated API route
- Implement global setup with database seeding for test fixtures
- Add test utilities and fixtures for authenticated/public tests
- Update configuration files to support test environment
- Include test artifacts upload and proper gitignore patterns

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 # testing
 /coverage
 
+# playwright
+/playwright-report
+/test-results
+/e2e/.auth
+
 # next.js
 /.next/
 /out/
@@ -26,7 +31,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env*
 
 # vercel
 .vercel
