--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,7 @@
 name: E2E Tests
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [main]
 
@@ -33,8 +34,23 @@ jobs:
       AUTH_KEYCLOAK_ISSUER: ${{ secrets.AUTH_KEYCLOAK_ISSUER }}
       AUTH_KEYCLOAK_ID: ${{ secrets.AUTH_KEYCLOAK_ID }}
       AUTH_KEYCLOAK_SECRET: ${{ secrets.AUTH_KEYCLOAK_SECRET }}
+      POSTHOG_PROJECT_ID: "0"
+      POSTHOG_PERSONAL_API_KEY: phx_ci
 
     steps:
+      - name: Validate required secrets
+        run: |
+          missing=()
+          [ -z "${{ secrets.E2E_AUTH_SECRET }}" ]    && missing+=("E2E_AUTH_SECRET")
+          [ -z "${{ secrets.AUTH_SECRET }}" ]         && missing+=("AUTH_SECRET")
+          [ -z "${{ secrets.AUTH_KEYCLOAK_ISSUER }}" ] && missing+=("AUTH_KEYCLOAK_ISSUER")
+          [ -z "${{ secrets.AUTH_KEYCLOAK_ID }}" ]   && missing+=("AUTH_KEYCLOAK_ID")
+          [ -z "${{ secrets.AUTH_KEYCLOAK_SECRET }}" ] && missing+=("AUTH_KEYCLOAK_SECRET")
+          if [ ${#missing[@]} -gt 0 ]; then
+            echo "::error::Missing required secrets: ${missing[*]}"
+            exit 1
+          fi
+
       - name: Checkout
         uses: actions/checkout@v4
 
