--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,7 @@ next-env.d.ts
 # vscode
 /.vscode
 
-# Sentry Config File
-.env.sentry-build-plugin
-
-# prisma
+3# prisma
 prisma/generated
 
 # mcp
